<resources>
    <string name="app_name">UPrice</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <dimen name="button_height">75dp</dimen>
    <dimen name="textSize">25sp</dimen>
    <dimen name="buttonMargin">0.5dp</dimen>
    <dimen name="layout_height">70dp</dimen>


    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="dot">.</string>
    <string name="modulo">%</string>
    <string name="yes">✓</string>
    <string name="no">X</string>
    <string name="delete">DEL</string>
    <string name="clear">C</string>
    <string name="no_comment">No comment</string>
    <string name="no_money">0$</string>
    <string name="cost">Cost</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="health">Health</string>
    <string name="food">Food</string>
    <string name="shopping">Shopping</string>
    <string name="leisure">Leisure</string>
    <string name="home">Home</string>
    <string name="gift">Gift</string>
    <string name="family">Family</string>
    <string name="plan">Plan</string>
    <string name="total">Total</string>
    <string name="cafe">Cafe</string>
    <string name="transport">Transport</string>
    <string name="Toast_div0">You can\'t divide by 0</string>
    <string name="help">Help</string>
    <string name="delete_all_operations">Delete all operations</string>

</resources>
